--- a/css/ui.css
+++ b/css/ui.css
@@ -38,3 +38,40 @@
 .modal-body {
   padding: 20px 30px 30px 30px;
 }
+
+.modal-backdrop.white-backdrop {
+  opacity: 1;
+  background-color: #fff;
+}
+
+.modal-backdrop.gray-backdrop {
+  opacity: 1;
+  background-color: #000000;
+}
+
+.modal.white-backdrop {
+  opacity: 1;
+  background-color: #fff;
+}
+
+.modal-backdrop.dark-backdrop {
+  opacity: 0.8;
+}
+
+.white-backdrop .modal-content {
+  border: none;
+  box-shadow: none;
+}
+
+.modal.modal-dark {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.doca-modal-md .modal-dialog {
+  width: 50rem;
+}
+
+.doca-modal {
+  top: 0 !important;
+  border-radius: 0 !important;
+}
