--- a/view/home.html
+++ b/view/home.html
@@ -1,5 +1,5 @@
 <div class="doca">
-  <navbar></navbar>
+  <navbar on-create-post="busca"></navbar>
 
   <loading class="doca-mt-8" ng-show="loading"></loading>
 
