--- a/view/modal-signup.html
+++ b/view/modal-signup.html
@@ -1,37 +1,57 @@
-<div class="modal-header">
-  <h3 class="modal-title" id="modal-title">Create Account</h3>
-</div>
-<div class="modal-body" id="modal-body">
-  <form name="loginForm" ng-submit="submit()">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input class="form-control" id="name" ng-model="formData.name" required />
-    </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input
-        type="email"
-        class="form-control"
-        id="email"
-        ng-model="formData.email"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password"
-        ng-model="formData.password"
-        required
-      />
-    </div>
-    <div style="display: flex; gap: 1rem; justify-content: flex-end">
-      <button class="btn btn-warning" type="button" ng-click="cancel()">
-        Cancel
-      </button>
-      <button class="btn btn-primary" type="submit">Confirm</button>
-    </div>
-  </form>
+<div class="doca">
+  <div class="modal-header">
+    <h3 class="doca-text doca-text--large doca-text--medium">Cadastro</h3>
+  </div>
+  <div class="modal-body" id="modal-body">
+    <form name="loginForm" ng-submit="submit()">
+      <div class="doca-form__field doca-form__field--required">
+        <label class="doca-form__label"> Name </label>
+        <input
+          class="doca-form-control"
+          id="name"
+          ng-model="formData.name"
+          required
+        />
+      </div>
+      <div class="doca-form__field doca-form__field--required">
+        <label class="doca-form__label"> Email </label>
+        <input
+          class="doca-form-control"
+          required
+          type="email"
+          id="email"
+          ng-model="formData.email"
+        />
+      </div>
+      <div class="doca-form__field doca-form__field--required">
+        <label class="doca-form__label"> Password </label>
+        <input
+          type="password"
+          class="doca-form-control"
+          id="password"
+          ng-model="formData.password"
+          required
+        />
+      </div>
+      <div
+        style="
+          display: flex;
+          gap: 1rem;
+          justify-content: flex-end;
+          margin-top: 1rem;
+        "
+      >
+        <button
+          class="doca-button doca-button--secondary"
+          type="button"
+          ng-click="cancel()"
+        >
+          Cancel
+        </button>
+        <button class="doca-button doca-button--primary" type="submit">
+          Confirmar
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
