--- a/view/modal-signup.html
+++ b/view/modal-signup.html
@@ -3,7 +3,7 @@
     <h3 class="doca-text doca-text--large doca-text--medium">Cadastro</h3>
   </div>
   <div class="modal-body" id="modal-body">
-    <form name="loginForm" ng-submit="submit()">
+    <form class="doca-gap-2 doca-flex-col doca-flex" ng-submit="submit()">
       <div class="doca-form__field doca-form__field--required">
         <label class="doca-form__label"> Name </label>
         <input
