--- a/view/modal-post.html
+++ b/view/modal-post.html
@@ -1,39 +1,50 @@
-<div class="modal-header">
-  <h3 class="modal-title" id="modal-title">Escreva um post</h3>
-</div>
-<div class="modal-body" id="modal-body">
-  <form name="loginForm" ng-submit="submit()">
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input
-        class="form-control"
-        id="title"
-        ng-model="formData.title"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="content">Content</label>
-      <textarea
-        class="form-control"
-        id="content"
-        ng-model="formData.content"
-        rows="8"
-        required
-      ></textarea>
-    </div>
-    <div
-      style="
-        display: flex;
-        gap: 1rem;
-        justify-content: flex-end;
-        flex-wrap: wrap;
-      "
-    >
-      <button class="btn btn-warning" type="button" ng-click="cancel()">
-        Cancel
-      </button>
-      <button class="btn btn-primary" type="submit">Confirm</button>
-    </div>
-  </form>
+<div class="doca">
+  <div class="modal-header">
+    <h3 class="doca-text doca-text--large doca-text--medium">
+      Escreva um post
+    </h3>
+  </div>
+  <div class="modal-body" id="modal-body">
+    <form class="doca-gap-2 doca-flex-col doca-flex" ng-submit="submit()">
+      <div class="form-group">
+        <label class="doca-form__label"> Título </label>
+        <input
+          class="doca-form-control"
+          id="title"
+          ng-model="formData.title"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label class="doca-form__label">Conteúdo</label>
+        <textarea
+          class="doca-form-control"
+          id="content"
+          ng-model="formData.content"
+          placeholder="Escreva..."
+          rows="8"
+          required
+        ></textarea>
+      </div>
+      <div
+        style="
+          display: flex;
+          gap: 1rem;
+          justify-content: flex-end;
+          flex-wrap: wrap;
+        "
+      >
+        <button
+          class="doca-button doca-button--secondary"
+          type="button"
+          ng-click="cancel()"
+        >
+          Cancel
+        </button>
+        <button class="doca-button doca-button--primary" type="submit">
+          Confirmar
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
