--- a/view/home.html
+++ b/view/home.html
@@ -1,29 +1,26 @@
 <div class="doca">
   <navbar on-create-post="busca"></navbar>
 
-  <loading class="doca-mt-8" ng-show="loading"></loading>
+  <div class="doca-mt-8" ng-show="loading">
+    <loading></loading>
+  </div>
 
-  <div
-    ng-show="!loading"
-    style="margin-inline: 20%; border-radius: 0.5rem; margin-top: 2rem"
-  >
-    <div>
-      <div ng-repeat="post in posts">
-        <ul class="doca-list">
-          <a ng-href="#!/post/{{ post.id }}">
-            <li class="doca-list__item">
-              <h1 class="doca-page__title">{{ truncate(post.title, 50) }}</h1>
-              <h2 class="doca-page__subtitle">
-                {{ truncate(post.content, 400) }}
-              </h2>
-              <h3 class="doca-page__subtitle">
-                {{ post.created_at | dateFormat: 'DD/MM/YYYY' }} - {{
-                post.total_likes }} likes
-              </h3>
-            </li>
-          </a>
-        </ul>
-      </div>
+  <div style="margin-inline: 20%; border-radius: 0.5rem; margin-top: 2rem">
+    <div ng-repeat="post in posts track by post.id">
+      <ul class="doca-list">
+        <a ng-href="#!/post/{{ post.id }}">
+          <li class="doca-list__item">
+            <h1 class="doca-page__title">{{ post.title | truncate: 100 }}</h1>
+            <h2 class="doca-page__subtitle">
+              {{ post.content | truncate: 400}}
+            </h2>
+            <h3 class="doca-page__subtitle">
+              {{ post.created_at | dateFormat: 'DD/MM/YYYY' }} - {{
+              post.total_likes }} likes
+            </h3>
+          </li>
+        </a>
+      </ul>
     </div>
   </div>
 </div>
