--- a/view/home.html
+++ b/view/home.html
@@ -4,15 +4,14 @@
   <div class="doca-mt-8" ng-show="loading">
     <loading></loading>
   </div>
-
   <div style="margin-inline: 20%; border-radius: 0.5rem; margin-top: 2rem">
     <div ng-repeat="post in posts track by post.id">
       <ul class="doca-list">
         <a ng-href="#!/post/{{ post.id }}">
           <li class="doca-list__item">
-            <h1 class="doca-page__title">{{ post.title | truncate: 100 }}</h1>
+            <h1 class="doca-page__title">{{ truncate(post.title, 100)}}</h1>
             <h2 class="doca-page__subtitle">
-              {{ post.content | truncate: 400}}
+              {{ truncate(post.content, 400) }}
             </h2>
             <h3 class="doca-page__subtitle">
               {{ post.created_at | dateFormat: 'DD/MM/YYYY' }} - {{
