--- a/view/show-post.html
+++ b/view/show-post.html
@@ -34,7 +34,7 @@
             {{post.total_likes}}
           </button>
         </div>
-        <div style="margin-left: auto">
+        <div style="margin-left: auto" ng-show="post.is_owner">
           <button
             class="doca-button doca-button--rounded doca-button--tertiary"
           >
