refactor: Update navbar.html to use ng-href instead of ui-sref
Replace the ui-sref attribute with ng-href in navbar.html to fix the issue preventing the logo from being clickable.

- Update navbar.html to use ng-href instead of ui-sref

--- a/view/navbar.html
+++ b/view/navbar.html
@@ -1,5 +1,5 @@
 <header class="ui-header">
-  <a class="ui-logo-header" ui-sref="home">
+  <a class="ui-logo-header" ng-href="#">
     <img
       class="ui-logo-header"
       src="https://avatars.githubusercontent.com/u/55717360?s=200&v=4"
@@ -8,7 +8,6 @@
   <div>
     <button
       class="doca-button doca-button--secondary"
-      ui-sref="home"
       ng-if="!isUserLoggedIn"
       ng-click="triggerLogin()"
     >
