refactor: Update navbar.html to use ng-href instead of ui-sref

--- a/view/home.html
+++ b/view/home.html
@@ -1,5 +1,5 @@
 <div class="doca">
-  <navbar on-create-post="busca"></navbar>
+  <navbar></navbar>
 
   <div class="doca-mt-8" ng-show="loading">
     <loading></loading>
