--- a/view/show-post.html
+++ b/view/show-post.html
@@ -37,6 +37,7 @@
         <div style="margin-left: auto" ng-show="post.is_owner">
           <button
             class="doca-button doca-button--rounded doca-button--tertiary"
+            ng-click="editPost()"
           >
             <i class="doca-icon doca-icon__pen"> </i>
           </button>
